Adds basic structure and content to index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
+  <div class='header'>
+    <h1>Erik Hart</h1>
+    <h2>Receptive Designer</h2>
+  </div>
+  <div class='tagline'>
+    <h3>Learn what makes Erik different</h3>
+    <p>Okay, so he claims to be "different," but different compared to what? Erik is a unique blend of creativity, communication, and good-old-fashioned grit. With a background in web development, education, and sales, Erik is able to bring together an idea and execute, taking into account many points of view.
+  </div>
+  <div class='skills'>
+    <h3>Erik's Skills</h3>
+    <p>Focused on back-end coding, with the ability to framework front-end with these skills:
+    </p>
+    <ul>
+      <li>Python 2/3</li>
+      <li>MySQL</li>
+      <li>HTML</li>
+    </ul>
+  </div>
+  <div class='contact'>
+    <h3>Contact Erik</h3>
+    <p>Contact Erik via email, phone, or social media</p>
+    <a href='http://www.linkedin.com/in/erikhart'>LinkedIn</a>
+  </div>
 
 </body>
 </html>
