Moves hyperlink to proper placement.

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,7 @@
   </div>
   <div class='contact'>
     <h3>Contact Erik</h3>
-    <p>Contact Erik via email, phone, or social media</p>
-    <a href='http://www.linkedin.com/in/erikhart'>LinkedIn</a>
+    <p>Contact Erik via email, phone, or <a href='http://www.linkedin.com/in/erikhart'>LinkedIn</a></p>
   </div>
 
 </body>
